--- a/_posts/2017-04-06-dieta-1200-kcal.markdown
+++ b/_posts/2017-04-06-dieta-1200-kcal.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Dieta de 1200 calorías"
 date:   2017-04-06 21:03:16 +0200
-categories: dietas
+category: dietas
 ---
 Esta dieta cuenta con un total de 1200 calorías repartidas en 5 comidas, la 
 cual puede ser usada en un peridodo de tiempo que no supere las dos semanas.
