--- a/_posts/2017-04-04-dieta-1200-kcal.markdown
+++ b/_posts/2017-04-04-dieta-1200-kcal.markdown
@@ -2,8 +2,11 @@
 layout: post
 title:  "Dieta de 1200 calorías"
 date:   2017-04-04 09:03:16 +0200
+author: Adrià Soto
 category: dietas
 ---
+![Dieta de 1200 calorías](/assets/dieta-de-1200-calorias.jpg)
+
 Esta dieta cuenta con un total de 1200 calorías repartidas en 5 comidas, la 
 cual puede ser usada en un peridodo de tiempo que no supere las dos semanas.
 
